default/example-ingress.yaml
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "example-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: "hello-world.info"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: "web"
              servicePort: 80
